# clu

./: .gitignore  CMakeLists.txt  xcode.sh
src/contribs-lib/: CMakeLists.txt
src/core/: CMakeLists.txt
src/demo/: CMakeLists.txt  IndexFiles.cpp  Main.cpp  SearchFiles.cpp  Statistics.cpp  io_config  tool.cpp  tool.h
src/myhtml/: CMakeLists.txt  myhtml.cmake
src/mytest/: CMakeLists.txt  NGramAnalyzer.cpp  NGramAnalyzer.h  NGramTokenizer.cpp  NGramTokenizer.h  bud.sh  mytest.cpp  mytest.h  tool.cpp  tool.h
src/shared/: CMakeLists.txt
src/shared/CLucene/: LuceneThreads.h
